examples/test/testpolicy17547.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17547
  namespace: namespace427
spec:
  podSelector:
    matchLabels:
      key30: value13
      key46: value11
      key41: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value2
          key33: value25
      podSelector:
        matchLabels:
          key46: value46
